adding assets folder w/ giyignore

--- a/Dashboard Shell.ipynb
+++ b/Dashboard Shell.ipynb
@@ -170,6 +170,26 @@
      "text": [
       "Dash app running on http://127.0.0.1:8051/\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-169:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda3/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/opt/anaconda3/lib/python3.7/threading.py\", line 870, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/dash/dash.py\", line 1290, in <lambda>\n",
+      "    sleep_time=dev_tools.hot_reload_watch_interval,\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/dash/_watch.py\", line 35, in watch\n",
+      "    walk()\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/dash/_watch.py\", line 20, in walk\n",
+      "    info = os.stat(path)\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: '/Users/tylerdrumheller/Documents/Grad School/SIADS697/assets/HD.csv'\n",
+      "\n"
+     ]
     }
    ],
    "source": [
