random dashboard update

--- a/Dashboard Shell.ipynb
+++ b/Dashboard Shell.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,13 +31,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dashboard Shell.ipynb \u001b[34metc\u001b[m\u001b[m                   ric_to_tic.py\r\n",
+      "README.md             fundamentals_spy.csv  sec_file_getter.py\r\n",
+      "Tyler Scrap.ipynb     historical_stocks.py  symbols.csv\r\n",
+      "\u001b[34massets\u001b[m\u001b[m                pyvenv.cfg            \u001b[34mvenv\u001b[m\u001b[m\r\n",
+      "download_from_s3.py   requirements.txt\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Getting all file paths\n",
     "\n",
-    "path = r'assets' # use your path\n",
+    "path = r'assets/historical-symbols' # use your path\n",
     "all_files = glob.glob(path + \"/*.csv\")\n",
     "\n",
     "# Creating list to append all ticker dfs to\n",
@@ -70,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -169,26 +190,6 @@
      "output_type": "stream",
      "text": [
       "Dash app running on http://127.0.0.1:8051/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-169:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/anaconda3/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/opt/anaconda3/lib/python3.7/threading.py\", line 870, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/opt/anaconda3/lib/python3.7/site-packages/dash/dash.py\", line 1290, in <lambda>\n",
-      "    sleep_time=dev_tools.hot_reload_watch_interval,\n",
-      "  File \"/opt/anaconda3/lib/python3.7/site-packages/dash/_watch.py\", line 35, in watch\n",
-      "    walk()\n",
-      "  File \"/opt/anaconda3/lib/python3.7/site-packages/dash/_watch.py\", line 20, in walk\n",
-      "    info = os.stat(path)\n",
-      "FileNotFoundError: [Errno 2] No such file or directory: '/Users/tylerdrumheller/Documents/Grad School/SIADS697/assets/HD.csv'\n",
-      "\n"
      ]
     }
    ],
@@ -198,12 +199,12 @@
     "server = app.server\n",
     "\n",
     "app.layout = html.Div([\n",
-    "    \n",
+    "\n",
     "    html.Div([\n",
     "        html.H1('Dashboard Title',style=title_style),\n",
     "        html.H3('Dashboard Info Link',style=title_link_style)\n",
     "        ]),\n",
-    "    \n",
+    "\n",
     "    dcc.Tabs(id='tabs-example', value='tab-1', children=[\n",
     "        dcc.Tab(label='Portfolio Performance', value='tab-1'),\n",
     "        dcc.Tab(label='Model Performance', value='tab-2'),\n",
