--- a/Dashboard Shell.ipynb
+++ b/Dashboard Shell.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -190,6 +190,54 @@
      "output_type": "stream",
      "text": [
       "Dash app running on http://127.0.0.1:8051/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-168:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda3/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/opt/anaconda3/lib/python3.7/threading.py\", line 870, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/dash/dash.py\", line 1290, in <lambda>\n",
+      "    sleep_time=dev_tools.hot_reload_watch_interval,\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/dash/_watch.py\", line 35, in watch\n",
+      "    walk()\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/dash/_watch.py\", line 20, in walk\n",
+      "    info = os.stat(path)\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: '/Users/tylerdrumheller/Documents/Grad School/SIADS697/assets/historical-symbols/4913'\n",
+      "\n",
+      "Exception in thread Thread-1886:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda3/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/opt/anaconda3/lib/python3.7/threading.py\", line 870, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/dash/dash.py\", line 1290, in <lambda>\n",
+      "    sleep_time=dev_tools.hot_reload_watch_interval,\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/dash/_watch.py\", line 35, in watch\n",
+      "    walk()\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/dash/_watch.py\", line 20, in walk\n",
+      "    info = os.stat(path)\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: '/Users/tylerdrumheller/Documents/Grad School/SIADS697/assets/historical-symbols/PYPL.csv'\n",
+      "\n",
+      "Exception in thread Thread-1550:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda3/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/opt/anaconda3/lib/python3.7/threading.py\", line 870, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/dash/dash.py\", line 1290, in <lambda>\n",
+      "    sleep_time=dev_tools.hot_reload_watch_interval,\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/dash/_watch.py\", line 35, in watch\n",
+      "    walk()\n",
+      "  File \"/opt/anaconda3/lib/python3.7/site-packages/dash/_watch.py\", line 20, in walk\n",
+      "    info = os.stat(path)\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: '/Users/tylerdrumheller/Documents/Grad School/SIADS697/assets/historical-symbols/TSCO.csv'\n",
+      "\n"
      ]
     }
    ],
