short term stock data generation

--- a/joey_model_viz.ipynb
+++ b/joey_model_viz.ipynb
@@ -945,8 +945,277 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "7751eab0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NVDA_open</th>\n",
+       "      <th>NVDA_high</th>\n",
+       "      <th>NVDA_low</th>\n",
+       "      <th>NVDA_close</th>\n",
+       "      <th>NVDA_volume</th>\n",
+       "      <th>AMD_open</th>\n",
+       "      <th>AMD_high</th>\n",
+       "      <th>AMD_low</th>\n",
+       "      <th>AMD_close</th>\n",
+       "      <th>AMD_volume</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SPY_open</th>\n",
+       "      <th>SPY_high</th>\n",
+       "      <th>SPY_low</th>\n",
+       "      <th>SPY_close</th>\n",
+       "      <th>SPY_volume</th>\n",
+       "      <th>QQQ_open</th>\n",
+       "      <th>QQQ_high</th>\n",
+       "      <th>QQQ_low</th>\n",
+       "      <th>QQQ_close</th>\n",
+       "      <th>QQQ_volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-07-20 19:40:00</th>\n",
+       "      <td>759.89</td>\n",
+       "      <td>760.12</td>\n",
+       "      <td>759.85</td>\n",
+       "      <td>760.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>87.2</td>\n",
+       "      <td>87.28</td>\n",
+       "      <td>87.2</td>\n",
+       "      <td>87.23</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>425.81</td>\n",
+       "      <td>425.84</td>\n",
+       "      <td>425.7</td>\n",
+       "      <td>425.75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>355.64</td>\n",
+       "      <td>355.64</td>\n",
+       "      <td>355.54</td>\n",
+       "      <td>355.59</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-20 19:45:00</th>\n",
+       "      <td>759.89</td>\n",
+       "      <td>760.12</td>\n",
+       "      <td>759.85</td>\n",
+       "      <td>760.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>87.2</td>\n",
+       "      <td>87.28</td>\n",
+       "      <td>87.2</td>\n",
+       "      <td>87.23</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>425.81</td>\n",
+       "      <td>425.84</td>\n",
+       "      <td>425.7</td>\n",
+       "      <td>425.75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>355.64</td>\n",
+       "      <td>355.64</td>\n",
+       "      <td>355.54</td>\n",
+       "      <td>355.59</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-20 19:50:00</th>\n",
+       "      <td>759.89</td>\n",
+       "      <td>760.12</td>\n",
+       "      <td>759.85</td>\n",
+       "      <td>760.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>87.2</td>\n",
+       "      <td>87.28</td>\n",
+       "      <td>87.2</td>\n",
+       "      <td>87.23</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>425.81</td>\n",
+       "      <td>425.84</td>\n",
+       "      <td>425.7</td>\n",
+       "      <td>425.75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>355.64</td>\n",
+       "      <td>355.64</td>\n",
+       "      <td>355.54</td>\n",
+       "      <td>355.59</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-20 19:55:00</th>\n",
+       "      <td>759.89</td>\n",
+       "      <td>760.12</td>\n",
+       "      <td>759.85</td>\n",
+       "      <td>760.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>87.2</td>\n",
+       "      <td>87.28</td>\n",
+       "      <td>87.2</td>\n",
+       "      <td>87.23</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>425.81</td>\n",
+       "      <td>425.84</td>\n",
+       "      <td>425.7</td>\n",
+       "      <td>425.75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>355.64</td>\n",
+       "      <td>355.64</td>\n",
+       "      <td>355.54</td>\n",
+       "      <td>355.59</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-20 20:00:00</th>\n",
+       "      <td>759.89</td>\n",
+       "      <td>760.12</td>\n",
+       "      <td>759.85</td>\n",
+       "      <td>760.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>87.2</td>\n",
+       "      <td>87.28</td>\n",
+       "      <td>87.2</td>\n",
+       "      <td>87.23</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>425.81</td>\n",
+       "      <td>425.84</td>\n",
+       "      <td>425.7</td>\n",
+       "      <td>425.75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>355.64</td>\n",
+       "      <td>355.64</td>\n",
+       "      <td>355.54</td>\n",
+       "      <td>355.59</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 60 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     NVDA_open  NVDA_high  NVDA_low  NVDA_close  NVDA_volume  \\\n",
+       "time                                                                           \n",
+       "2021-07-20 19:40:00     759.89     760.12    759.85       760.0          0.0   \n",
+       "2021-07-20 19:45:00     759.89     760.12    759.85       760.0          0.0   \n",
+       "2021-07-20 19:50:00     759.89     760.12    759.85       760.0          0.0   \n",
+       "2021-07-20 19:55:00     759.89     760.12    759.85       760.0          0.0   \n",
+       "2021-07-20 20:00:00     759.89     760.12    759.85       760.0          0.0   \n",
+       "\n",
+       "                     AMD_open  AMD_high  AMD_low  AMD_close  AMD_volume  ...  \\\n",
+       "time                                                                     ...   \n",
+       "2021-07-20 19:40:00      87.2     87.28     87.2      87.23         0.0  ...   \n",
+       "2021-07-20 19:45:00      87.2     87.28     87.2      87.23         0.0  ...   \n",
+       "2021-07-20 19:50:00      87.2     87.28     87.2      87.23         0.0  ...   \n",
+       "2021-07-20 19:55:00      87.2     87.28     87.2      87.23         0.0  ...   \n",
+       "2021-07-20 20:00:00      87.2     87.28     87.2      87.23         0.0  ...   \n",
+       "\n",
+       "                     SPY_open  SPY_high  SPY_low  SPY_close  SPY_volume  \\\n",
+       "time                                                                      \n",
+       "2021-07-20 19:40:00    425.81    425.84    425.7     425.75         0.0   \n",
+       "2021-07-20 19:45:00    425.81    425.84    425.7     425.75         0.0   \n",
+       "2021-07-20 19:50:00    425.81    425.84    425.7     425.75         0.0   \n",
+       "2021-07-20 19:55:00    425.81    425.84    425.7     425.75         0.0   \n",
+       "2021-07-20 20:00:00    425.81    425.84    425.7     425.75         0.0   \n",
+       "\n",
+       "                     QQQ_open  QQQ_high  QQQ_low  QQQ_close  QQQ_volume  \n",
+       "time                                                                     \n",
+       "2021-07-20 19:40:00    355.64    355.64   355.54     355.59         0.0  \n",
+       "2021-07-20 19:45:00    355.64    355.64   355.54     355.59         0.0  \n",
+       "2021-07-20 19:50:00    355.64    355.64   355.54     355.59         0.0  \n",
+       "2021-07-20 19:55:00    355.64    355.64   355.54     355.59         0.0  \n",
+       "2021-07-20 20:00:00    355.64    355.64   355.54     355.59         0.0  \n",
+       "\n",
+       "[5 rows x 60 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = pd.read_csv('assets/short_term_symbols/total.csv')\n",
+    "results['time'] = pd.to_datetime(results['time'])\n",
+    "results = results.set_index(results['time']).drop(columns=['time'])\n",
+    "results = results.loc['2020-07-20 04:05:00':]\n",
+    "results.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9f76489d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "for time in range(0, results.shape[0]):\n",
+    "    print(results.iloc[time].name.minute == 1 and 1 == 2)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c919277",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -954,7 +1223,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -968,7 +1237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
