adding minor changes to accommodate my code

--- a/port_charts.ipynb
+++ b/port_charts.ipynb
@@ -33,10 +33,15 @@
     "    :param port: an instance of the port_2 class \n",
     "    :param BM: the ticker for a desired benchmark ETF\n",
     "    '''\n",
-    "    s_date = port.track_record['Date'].iloc[0]\n",
-    "    e_date = port.track_record['Date'].iloc[-1]\n",
+    "    if isinstance(port, pd.DataFrame):\n",
+    "        s_date = port.index[0]\n",
+    "        e_date = port.index[1]\n",
+    "        tr = port.drop_duplicates().reset_index()\n",
+    "    else:\n",
+    "        s_date = port.track_record['Date'].iloc[0]\n",
+    "        e_date = port.track_record['Date'].iloc[-1]\n",
+    "        tr = port.track_record.drop_duplicates()\n",
     "    spy = si.get_data(BM.upper(), start_date = s_date, end_date = e_date)['close']\n",
-    "    tr = port.track_record.drop_duplicates()\n",
     "    tr['Date'] = pd.to_datetime(tr['Date'])\n",
     "    plot_dat = tr.set_index('Date').join(spy)\n",
     "    plot_dat = plot_dat.filter(['Value', 'close']).dropna()\n",
@@ -70,10 +75,15 @@
     "    :param BM: the ticker for a desired benchmark ETF\n",
     "    '''\n",
     "    color_codes = [\"#FFCB05\", \"#00274C\", \"#9A3324\", \"#D86018\", \"#75988d\", \"#A5A508\", \"#00B2A9\", \"#2F65A7\", \"#702082\"]\n",
-    "    s_date = port.track_record['Date'].iloc[0]\n",
-    "    e_date = port.track_record['Date'].iloc[-1]\n",
+    "    if isinstance(port, pd.DataFrame):\n",
+    "        s_date = port.index[0]\n",
+    "        e_date = port.index[1]\n",
+    "        tr = port.drop_duplicates().reset_index()\n",
+    "    else:\n",
+    "        s_date = port.track_record['Date'].iloc[0]\n",
+    "        e_date = port.track_record['Date'].iloc[-1]\n",
+    "        tr = port.track_record.drop_duplicates()\n",
     "    spy = si.get_data(BM, start_date = s_date, end_date = e_date)['close']\n",
-    "    tr = port.track_record.drop_duplicates()\n",
     "    tr['Date'] = pd.to_datetime(tr['Date'])\n",
     "    plot_dat = tr.set_index('Date').join(spy)\n",
     "    plot_dat = plot_dat.filter(['Value', 'close']).dropna()\n",
@@ -122,10 +132,15 @@
     "    :param BM: the ticker for a desired benchmark ETF\n",
     "    '''\n",
     "    color_codes = [\"#FFCB05\", \"#00274C\", \"#9A3324\", \"#D86018\", \"#75988d\", \"#A5A508\", \"#00B2A9\", \"#2F65A7\", \"#702082\"]\n",
-    "    s_date = port.track_record['Date'].iloc[0]\n",
-    "    e_date = port.track_record['Date'].iloc[-1]\n",
+    "    if isinstance(port, pd.DataFrame):\n",
+    "        s_date = port.index[0]\n",
+    "        e_date = port.index[1]\n",
+    "        tr = port.drop_duplicates().reset_index()\n",
+    "    else:\n",
+    "        s_date = port.track_record['Date'].iloc[0]\n",
+    "        e_date = port.track_record['Date'].iloc[-1]\n",
+    "        tr = port.track_record.drop_duplicates()\n",
     "    spy = si.get_data(BM, start_date = s_date, end_date = e_date)['close']\n",
-    "    tr = port.track_record.drop_duplicates()\n",
     "    tr['Date'] = pd.to_datetime(tr['Date'])\n",
     "    plot_dat = tr.set_index('Date').join(spy)\n",
     "    plot_dat = plot_dat.filter(['Value', 'close']).dropna()\n",
@@ -213,10 +228,15 @@
     "    :param BM: the ticker for a desired benchmark ETF\n",
     "    '''\n",
     "    color_codes = [\"#FFCB05\", \"#00274C\", \"#9A3324\", \"#D86018\", \"#75988d\", \"#A5A508\", \"#00B2A9\", \"#2F65A7\", \"#702082\"]\n",
-    "    s_date = port.track_record['Date'].iloc[0]\n",
-    "    e_date = port.track_record['Date'].iloc[-1]\n",
+    "    if isinstance(port, pd.DataFrame):\n",
+    "        s_date = port.index[0]\n",
+    "        e_date = port.index[1]\n",
+    "        tr = port.drop_duplicates().reset_index()\n",
+    "    else:\n",
+    "        s_date = port.track_record['Date'].iloc[0]\n",
+    "        e_date = port.track_record['Date'].iloc[-1]\n",
+    "        tr = port.track_record.drop_duplicates()\n",
     "    spy = si.get_data(BM, start_date = s_date, end_date = e_date)['close']\n",
-    "    tr = port.track_record.drop_duplicates()\n",
     "    tr['Date'] = pd.to_datetime(tr['Date'])\n",
     "    plot_dat = tr.set_index('Date').join(spy)\n",
     "    plot_dat = plot_dat.filter(['Value', 'close']).dropna()\n",
@@ -266,7 +286,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
