added fundamental charts to port, minor model tweek, ML stats csv

--- a/data_collection_five_factor.ipynb
+++ b/data_collection_five_factor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4fced38c-3bfc-4138-9cda-70b1914d452b",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2b0f0cc0-fb5d-46f3-95dc-79ba0b49d61a",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1a978af1-3cf7-48c2-a04b-7d2316d32076",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b4d877fc-c4a1-467b-ae1c-385202516dca",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5a3dcea2-61f9-4655-a4cc-c8f42e751cd6",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "022636ed-a84c-4e0a-8075-68978e6841b2",
    "metadata": {},
    "outputs": [],
@@ -353,6 +353,38 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f293d5fc-32ea-4904-8d64-8864b9759137",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Windows\\anaconda3\\envs\\capstone\\lib\\site-packages\\pandas\\core\\reshape\\merge.py:648: UserWarning: merging between different levels can give an unintended result (1 levels on the left,2 on the right)\n",
+      "  warnings.warn(msg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n",
+      "100\n",
+      "150\n",
+      "200\n",
+      "250\n",
+      "300\n",
+      "350\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_mv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d96a5021-8192-42f4-9323-68cfc476ac83",
    "metadata": {},
    "outputs": [],
    "source": []
